Chasma-214: Added starter template for integration of GitLab to web app
